
########### install files ###############

install(FILES
  akershus.png
  aust-agder.png
  buskerud.png
  finnmark.png
  hedmark.png
  hordaland.png
  more_og_romsdal.png
  nordland.png
  oppland.png
  oslo.png
  ostfold.png
  rogaland.png
  sogn_og_fjordane.png
  telemark.png
  troms.png
  trondelag.png
  vest-agder.png
  vestfold.png

	DESTINATION ${KDE_INSTALL_DATADIR}/kgeography/flags/norway)

