
install(FILES
	aveiro.png
	beja.png
	braga.png
	evora.png
	guarda.png
	lisboa.png
	portalegre.png
	santarem.png
	viana_do_castelo.png
	viseu.png
	azores.png
	braganca.png
	castelo_branco.png
	coimbra.png
	faro.png
	leiria.png
	madeira.png
	porto.png
	setubal.png
	vila_real.png

	DESTINATION ${DATA_INSTALL_DIR}/kgeography/flags/portugal)

