
install(FILES
	aveiro.png
	blurred_aveiro.png
	beja.png
	blurred_beja.png
	braga.png
	blurred_braga.png
	evora.png
	blurred_evora.png
	guarda.png
	blurred_guarda.png
	lisboa.png
	blurred_lisboa.png
	portalegre.png
	blurred_portalegre.png
	santarem.png
	blurred_santarem.png
	viana_do_castelo.png
	blurred_viana_do_castelo.png
	viseu.png
	blurred_viseu.png
	azores.png
	braganca.png
	blurred_braganca.png
	castelo_branco.png
	blurred_castelo_branco.png
	coimbra.png
	blurred_coimbra.png
	faro.png
	blurred_faro.png
	leiria.png
	blurred_leiria.png
	madeira.png
	porto.png
	blurred_porto.png
	setubal.png
	blurred_setubal.png
	vila_real.png
	blurred_vila_real.png

	DESTINATION ${KDE_INSTALL_DATADIR}/kgeography/flags/portugal)

